deploy/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dkhptd-web
spec:
  selector:
    app: dkhptd-web
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dkhptd-api-gateway
spec:
  selector:
    app: dkhptd-api-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
