deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkhptd
spec:
  ingressClassName: nginx
  rules:
    - host: dkhptd.tuana9a.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dkhptd-api-gateway
                port:
                  number: 8080
